# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  logic.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py
brain_games/scripts/: brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
