[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games: 5 math mini-games"
authors = ["Anton Fomkin <<mr.fomkin@bk.ru>>"]
repository = "https://github.com/iamumbrella/python-project-49.git"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

